# hf-tokenizer-bridge

./: .gitignore  Cargo.toml  Makefile  README.md
example/golang/: go.mod  main.go  tokenizer-test
golang-tokenizer-bridge/: go.mod  tokenizer.go
golang-tokenizer-bridge/tokenizer/: hf_tokenizer_bridge.h  tokenizer.go
src/: lib.rs
