[package]
name = "hf-tokenizer-bridge"
version = "0.1.0"
edition = "2024"
description = "Bridge to use Hugging Face Tokenizers from Golang"
license = "MIT"

[dependencies]
tokenizers = { version = "0.21.1", features = ["http"] }
serde_json = "1.0"

[lib]
name = "hf_tokenizer_bridge"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_tokenizer"
path = "src/bin/test_tokenizer.rs"
